--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -106,7 +106,7 @@ As indicated previously, we follow problem-based learning; this implies that the
 
 The student needs to pass objective number 5 to get a passing grade; every objective beyond that one works toward obtaining full marks. Objectives receive a different percentage of the total grade depending on the actual amount of work they need, not on the actual content. The percentage was adjusted depending on the amount of time students needed from submission to passing the objective in the first year. It did not need further adjustments in the following years. {\em Bigger} objectives get 15\% of the grade, while the smallest ones (for instance, the first one) can get only 5 \%. All students passing a certain objective obtain the same grade; this is why formative evaluation is often called {\em grade-less}, since learning objectives are reached or not, and when reached, everyone gets the same grade. Different grades correspond only to the fact that different objectives are reached.
 
-Using GitHub PRs as a platform helps the creation of other workflows and work patterns around these PRs. Every time a PR submitted to the "central" repository passes tests, five random reviewers are drawn from the pool of other students that have already cleared that objective. Every objective, then, receives feedback not only from the teacher, but also from their peers. Again, this fits the agile mindset, but when students need to verbalize the issues with a PR by a colleague, it helps them settle the knowledge they have acquired in the objective they already passed. Additionally, it helps them understand the need for a efficient communication, through PRs, with other members of the team, and to use effectively these tools, closing the gap between classes and actual work\footnote{These reviews are made for additional credit; reaching all the objectives includes only 70\% of the final grade}.
+Using GitHub as a platform and pull requests as the main vehicle helps the creation of other workflows and work patterns around these PRs. Every time a PR submitted to the "central" repository passes tests, five random reviewers are drawn from the pool of other students that have already cleared that objective. Every objective, then, receives feedback not only from the teacher, but also from their peers. Again, this fits the agile mindset, but when students need to verbalize the issues with a PR by a colleague, it helps them settle the knowledge they have acquired in the objective they already passed. Additionally, it helps them understand the need for a efficient communication, through PRs, with other members of the team, and to use effectively these tools, closing the gap between classes and actual work\footnote{These reviews are made for additional credit; reaching all the objectives includes only 70\% of the final grade}.
 
 Since these PRs happen in separate repositories (one for every student), we need a single, centralized place as a {\em platform} that helps to have an unified view of the whole class; this is carried out via a single repository, where the students submit a PR to a file that is different for each objective, and which triggers a workflow with a series of baseline tests of correctness of the PR submitted for clearing every objective. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events. This file is the single source of truth for the state of every objective for every student, and can be analyzed to study the progress of the class.
 
