--- a/learning-analytics.bib
+++ b/learning-analytics.bib
@@ -8,6 +8,7 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
+
 @article{elias2011learning,
   title={Learning analytics},
   author={Elias, Tanya},
@@ -16,6 +17,7 @@
   year={2011},
   publisher={Citeseer}
 }
+
 @article{stanja2023formative,
   title={Formative assessment strategies for students' conceptions—The potential of learning analytics},
   author={Stanja, Judith and Gritz, Wolfgang and Krugel, Johannes and Hoppe, Anett and Dannemann, Sarah},
@@ -33,8 +35,9 @@
   booktitle={2013 Seventh international conference on next generation mobile apps, services and technologies},
   pages={262--267},
   year={2013},
-  organization={IEEE}
+  publisher={IEEE}
 }
+
 @article{zhang2023learning,
   title={Learning analytics in formative assessment: A systematic literature review},
   author={ZHANG, Ke and YILMAZ, Ramazan and USTUN, Ahmet Berk and YILMAZ, Fatma Gizem KARAO{\u{G}}LAN},
@@ -46,10 +49,10 @@
   publisher={E{\u{g}}itimde ve Psikolojide {\"O}l{\c{c}}me ve De{\u{g}}erlendirme Derne{\u{g}}i}
 }
 
-@article{tempelaar2020learning,
+@InBook{tempelaar2020learning,
   title={Learning feedback based on dispositional learning analytics},
   author={Tempelaar, Dirk and Nguyen, Quan and Rienties, Bart},
-  journal={Machine Learning Paradigms: Advances in Learning Analytics},
+  booktitle={Machine Learning Paradigms: Advances in Learning Analytics},
   pages={69--89},
   year={2020},
   publisher={Springer}
