--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -20,22 +20,8 @@ pages = {199-208},
 year = {1986},
 doi = {10.1177/001440298605300301},
     note ={PMID: 3792417},
-
-URL = { 
-    
-        https://doi.org/10.1177/001440298605300301
-    
-    
-
-},
-eprint = { 
-    
-        https://doi.org/10.1177/001440298605300301
-    
-    
-
-}
-,
+URL = {https://doi.org/10.1177/001440298605300301},
+eprint = {https://doi.org/10.1177/001440298605300301},
     abstract = { This meta-analysis investigated the effects of formative evaluation procedures on student achievement. The data source was 21 controlled studies, which generated 96 relevant effect sizes, with an average weighted effect size of .70. The magnitude of the effect of formative evaluation was associated with publication type, data-evaluation method, data display, and use of behavior modification. Implications for special education practice are discussed. }
 }
 
@@ -49,6 +35,7 @@ eprint = {
   year={2018},
   publisher={Emerald Publishing Limited}
 }
+
 @article{scriven1996theory,
   title={The theory behind practical evaluation},
   author={Scriven, Michael},
@@ -64,7 +51,7 @@ eprint = {
   chapter={THE METHODOLOGY OF EVALUATION},
   author={Scriven, Michael},
   title={Perspectives in curriculum evaluation},
-  editors={Tyler, Gagné, Scriven}
+  editors={Tyler, Gagné, Scriven},
   year={1967},
   publisher={Rand McNally}
 }
