--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -63,18 +63,15 @@ The agile manifesto provides a framework for software development in which custo
 %\received[revised]{12 March 2009}
 %\received[accepted]{5 June 2009}
 
-%%
-%% This command processes the author and affiliation and title
-%% information and builds the first part of the formatted document.
 \maketitle
 
 \section{Introduction}
 
-Teaching software engineering represents not only a challenge, but a series of challenges to the teacher, who needs the student to acquire a series of marketable skills at the same time that this acquisition is assessed in order to obtain a grade. At the same time, mainstream software development follows an {\em agile mindset}, following the Agile Manifesto \cite{agilemanifesto}, which is a customer-centered philosophy that maintains that any change in code should add value to the customer, either directly or indirectly. Teaching mindsets of philosophies is a notch more complicated than teaching skills; evaluating mindsets is even more complex. But that is what an industry with its ever growing {\em need for talent} is asking for.
+Teaching software engineering represents not only one, but a series of challenges to the teacher, who needs the student to acquire a series of marketable skills at the same time that this acquisition is assessed in order to obtain a grade; essentially, it needs to deliver a product (student with acquired competences). Software development also focuses on delivering products, and it currently employs an {\em agile mindset}, following the Agile Manifesto \cite{agilemanifesto}, which is a customer-centered philosophy that maintains that any change in code should add value to the customer, either directly or indirectly. Teaching mindsets of philosophies is a notch more complicated than teaching skills; evaluating mindsets is even more complex. But that is what an industry with its ever growing {\em need for talent} is asking for.
 
 One of the ways of teaching a mindset is having that same mindset while teaching; that is, if you want to teach agile, be agile while teaching \cite{chun2004agile,krehbiel2017agile}. One step into this mindset is simply to consider class experience a product for which students, collectively and individually, are the customers, and use industry-standard tools such as GitHub to produce class materials, create course-oriented milestones, as well as generate issues with the problems that need to be solved, content-wise or related to any software that you might have developed to support teaching.
 
-You can, however, go a bit further and embrace agile in all stages of the teaching/learning process. Several researchers have proposed manifestos in agile teaching, so the first step would be to understand those manifestos and adopt them where possible. In our case, the manifesto created by Krehbiel et al. \cite{krehbiel2017agile} seems the closest to what we have working with; this manifesto emphasizes adaptability to personal (and other) circumstances, teamwork, focusing on learning objectives and not on grades, autonomous learning by the student, practical working instead of theoretical teaching, and, over all, continuous improvement.
+You can, however, go a bit further and embrace agile in all stages of the teaching/learning process. Several researchers have proposed manifestos in agile teaching, so the first step would be to understand those manifestos and adopt them where possible. In our case, the manifesto created by Krehbiel et al. \cite{krehbiel2017agile} seems the closest to our philosophy; this manifesto emphasizes adaptability to personal (and other) circumstances, teamwork, focusing on learning objectives and not on grades, autonomous learning by the student, practical working instead of theoretical teaching, and, over all, continuous improvement.
 
 Manifestos are never enough either in development or teaching, and agile development encourages the adoption of best practices in every phase of development; but the last part of the manifesto which talks about continuous improvement, as well as the fact that we are talking about {\em best} practices, would need some way of measuring progress and how adopted practices affect the classroom. This is why we would like to add a new item to the manifesto: {\em learning analytics} \cite{clow2013overview} over anecdotal evidence or end-of-class failure/success rates.
 
@@ -248,7 +245,7 @@ Since every class is going to be different, in-class measurements such as the ti
 
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib}
+\bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib,../formative-evaluation.bib}
 
 \end{document}
 \endinput
