Explaining class setup

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -99,7 +99,7 @@ What seems to be missing is, however, a single set of learning process measureme
 \section{Class setup and methodology}
 \label{sec:setup}
 
-As indicated previously, we follow problem-based learning; this implies that the students need to work on their own project for the duration; they will do so along 10 levels of project completion, numbered from 0 to 9\footnote{Internally called "Objectives"}. Every student will work on their own repository; for every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which matches interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objective, and eventually accept it when it does.
+Problem-based learning make students work on their own project and repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
 The student needs to pass objective number 5 to get a passing grade; every objective beyond that one works toward obtaining full marks. Objectives receive a different percentage of the total grade depending on the actual amount of work they need, not on the actual content. The percentage was adjusted depending on the amount of time students needed from submission to passing the objective in the first year. It did not need further adjustments in the following years. {\em Bigger} objectives get 15\% of the grade, while the smallest ones (for instance, the first one) can get only 5 \%. All students passing a certain objective obtain the same grade; this is why formative evaluation is often called {\em grade-less}, since learning objectives are reached or not, and when reached, everyone gets the same grade. Different grades correspond only to the fact that different objectives are reached.
 
