Terminates class setup

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -101,22 +101,19 @@ What seems to be missing is, however, a single set of learning process measureme
 
 Problem-based learning make students work on their own project and repository; this course will have 10 levels of project completion ("objectives"), numbered from 0 to 9. For every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which prefers interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objectives, and eventually accept it when it does.
 
-The student needs to pass objective number 5 to get a passing grade; every objective beyond that one works toward obtaining full marks. Objectives receive a different percentage of the total grade depending on the actual amount of work they need, not on the actual content. The percentage was adjusted depending on the amount of time students needed from submission to passing the objective in the first year. It did not need further adjustments in the following years. {\em Bigger} objectives get 15\% of the grade, while the smallest ones (for instance, the first one) can get only 5 \%. All students passing a certain objective obtain the same grade; this is why formative evaluation is often called {\em grade-less}, since learning objectives are reached or not, and when reached, everyone gets the same grade. Different grades correspond only to the fact that different objectives are reached.
+Since these PRs happen in the students' repos, we need a single, centralized place as a {\em platform} to have an unified view of the whole class; this is carried out via a single, "class" repository, where the students submit a PR to a file that is different for each objective, triggering a workflow with a series of baseline tests of correctness of the PR submitted. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events and when they occur. This file is the single source of truth for the state of every objective for every student, and will be analyzed to study the progress of the class.
 
-Using GitHub as a platform and pull requests as the main vehicle helps the creation of other workflows and work patterns around these PRs. Every time a PR submitted to the "central" repository passes tests, five random reviewers are drawn from the pool of other students that have already cleared that objective. Every objective, then, receives feedback not only from the teacher, but also from their peers. Again, this fits the agile mindset, but when students need to verbalize the issues with a PR by a colleague, it helps them settle the knowledge they have acquired in the objective they already passed. Additionally, it helps them understand the need for a efficient communication, through PRs, with other members of the team, and to use effectively these tools, closing the gap between classes and actual work\footnote{These reviews are made for additional credit; reaching all the objectives includes only 70\% of the final grade}.
+The student needs to pass objective number 5 to get a passing grade; every objective beyond that one works toward obtaining full marks. Objectives receive a different percentage of the total grade depending on the actual amount of work they need. The percentage was adjusted depending on the amount of time students needed from submission to passing the objective in the first year. It did not need further adjustments in the following years. {\em Bigger} objectives get 15\% of the grade, while the smallest ones (for instance, the first one) can get only 5 \%. All students passing a certain objective obtain the same grade; this is why formative evaluation is often called {\em grade-less}, since learning objectives are reached or not, and when reached, everyone gets the same grade. Different grades correspond only to the fact that different objectives are reached.
 
-Since these PRs happen in separate repositories (one for every student), we need a single, centralized place as a {\em platform} that helps to have an unified view of the whole class; this is carried out via a single repository, where the students submit a PR to a file that is different for each objective, and which triggers a workflow with a series of baseline tests of correctness of the PR submitted for clearing every objective. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events. This file is the single source of truth for the state of every objective for every student, and can be analyzed to study the progress of the class.
+Using GitHub as a platform and pull requests as the main vehicle helps the creation of other workflows and work patterns around these PRs. Every time a PR submitted to the "central" repository passes tests, five random reviewers are drawn from the pool of other students that have already cleared that objective. The student, then, receives feedback for every learning objective not only from the teacher, but also from their peers. Again, this fits the agile mindset, but when students need to verbalize the issues with a PR by a colleague, it helps them settle the knowledge they have acquired in the objective they already passed. Additionally, it helps them understand the need for a efficient communication, through PRs, with other members of the team, and to use effectively these tools, closing the gap between classes and actual work and following an agile mindset\footnote{These reviews are made for additional credit; reaching all the objectives includes only 70\% of the final grade}.
 
 In general, we strive to make feedback as fast as possible, so that students can react to it in a timely way. The general rule is that we will react to requests for feedback (which are made either by a comment with mention in a pull request or using the specific mechanism GitHub has to request reviews) in less than 48h\footnote{Exception being some weekends, and official holidays}. A fast feedback is essential for the student to still have whatever conceptions or assumptions fresh so that they can be modified.
 
-This implies a certain workload, mainly in the early stages when students submit their pull requests at pretty much the same time. However, early objectives require less effort to review than later ones; and when these later ones arrive, the teacher only has to chime in when one to three other students have already approved the submission. Although it is rather infrequent than no further suggestions have to been made, most frequent errors have already been ironed out by these reviews and request for changes. Additionally, a {\em frequent errors} specific for every objective is created, and this is specific for every school year. This is used by the students as a check list before submitting the review, but also, since it is created as submissions are reviewed, also by the teacher for quoting when these frequent errors show up in a pull request made by a student. In some cases specific errors that can be automatically checked show up (for instance, using capital letters in the names of files, something that is generally discouraged in repository-checked projects) they are incorporated into the automatic tests the PRs undergo when submitted to the central repository, so that they do not require additional rounds of reviewing by the teacher, releasing time needed for in-depth examination and feedback to the student.
+This implies a certain (and rather irregular) workload, mainly in the early stages when students submit their pull requests at pretty much the same time. However, early objectives require less effort to review than later ones; and when these ones arrive, the teacher only has to chime in when one to three other students have already approved the submission. Although it is rather infrequent than no further suggestions have to been made, most frequent errors have already been ironed out by these reviews and request for changes. Additionally, every course a {\em frequent errors} specific for every objective is created. This is used by the students as a check list before submitting the review, but also, since it is created as submissions are reviewed, also by the teacher for quoting when these frequent errors show up in a pull request. In some cases specific errors that can be automatically checked show up (for instance, using capital letters in the names of files, something that is generally discouraged in repository-checked projects) they are incorporated into the automatic tests the PRs undergo when submitted to the central repository, so that they do not require additional rounds of reviewing by the teacher, releasing time needed for in-depth examination and feedback to the student; this is well within the agile mindset.
 
-In general, workload for the teacher is much more intensive than it is for {\em summative} evaluation or traditional {\em flipped learning} classes. However, the system has been set up so that most of the time spent by the teacher is effectively spent in giving constructive feedback to the student, so that they can reach their learning objectives.
+In general, workload for the teacher is bigger than for {\em summative} evaluation or traditional {\em flipped learning} classes. However, the system has been set up so that most of the time spent by the teacher is effectively spent in giving constructive feedback to the student, so that they can reach their learning objectives.
 
-During face to face classes, time is spent either addressing issues with specific students, or making small-group explanations to those that have just passed an objective. These whiteboard (never slides) expositions are adapted to specific circumstances of the student of group of students (early submitters, or late ones, for instance). In general, classes are working spaces where students and teacher interact with each other.
-
-After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{hidden.u.rl}.
-%\url{https://github.com/JJ/ivR}.
+During face to face classes, time is spent either addressing issues with specific students, or making small-group explanations on the next submission to those that have just passed an objective. These whiteboard (never slide-based) expositions are adapted to specific circumstances of the student of group of students (early submitters, or late ones, for instance). In general, classes are working spaces where students and teacher interact with each other and work towards reaching their learning objectives.
 
 In our country universitary system and for this subject, classes and evaluations are organized in this way:\begin{itemize}
 \item A class period, which takes 15 weeks, for a total of (up to) 60 face-to-face hours. This is equivalent to 6 ECTS credits.
@@ -124,9 +121,10 @@ In our country universitary system and for this subject, classes and evaluations
 \item The {\em extraordinary evaluation period}, which takes place up to 3 weeks after the ordinary evaluation period.
 \end{itemize}
 
-The way the class is organized, whoever passes the minimum number of objectives during the ordinary period is evaluated during that period; if that is not the case, students can continue submitting their objectives up to the end of the extraordinary evaluation period, whatever objectives have been reached during the ordinary evaluation period do not need to be submitted. Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}.
+Whoever passes the minimum number of objectives during the ordinary period is evaluated during that period; if that is not the case, students can continue submitting the rest of their objectives up to the end of the extraordinary evaluation period. Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{hidden.u.rl}.
+%\url{https://github.com/JJ/ivR}.
 
-Next we will choose metrics and analyze the kind of information we can obtain from them, and how they can be used to improve learning outcomes.
+Next we will choose metrics and analyze the kind of insights we can obtain from them, and how they can be used to improve learning outcomes.
 
 \section{Results}
 \label{sec:results}
